# Template_-_Python_Package

./: .gitignore  .gitignore.jinja  AGENTS.md  LICENSE.jinja  Makefile  Makefile.jinja  Python Package Template Generation.md  README.md  README.md.jinja  SPEC.md  copier.yml  pyproject.toml  pyproject.toml.jinja
.github/workflows/: ci.yml  ci.yml.jinja  release.yml.jinja
src/[[ project_slug ]]/: __init__.py  cli.py
src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja  cli.py.jinja  config.py.jinja  core.py.jinja  utils.py.jinja
src/{{ package_name }}/commands/: __init__.py.jinja  config.py.jinja  data.py.jinja
src/{{ project_name | slugify }}/: __init__.py  cli.py
src/{{ project_slug }}/: cli.py
tests/: __init__.py  __init__.py.jinja  conftest.py.jinja  test_cli.py  test_cli.py.jinja  test_commands.py.jinja  test_core.py.jinja
